[tool.poetry]
name = "wots"
version = "3.6"
description = ""
authors = ["Roman Kharitonov <rkharito@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
PyQt5 = "5.10.1"
lxml = "^4.6.3"
psutil = "^5.8.0"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
cssselect = "^1.1.0"
raven = "^6.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
